// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextMenu tests > Position adjusted when too close to bottom edge 1`] = `
<div
  class="outermost"
>
  <div>
    <div
      class="context-menu-area"
    >
      <p
        class="greeting"
        style="color: black; font: Arial;"
      >
         Happy Halloween 
      </p>
    </div>
     
    <div
      class="context-menu-mask"
      data-v-1f32e17a=""
      style=""
    >
      <menu
        active-descendent="context-menu-item-12"
        class="context-menu-container"
        data-v-1f32e17a=""
        style="left: 2px; top: 498px;"
        tabindex="0"
      >
        <button
          class="unstyled-button context-menu-option hoverable-item active-descendant"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      One
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option hoverable-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      Two
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option hoverable-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      Three
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option disabled-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          disabled="disabled"
          type="button"
        >
          
                      Disabled
                    
        </button>
      </menu>
    </div>
  </div>
   
  <input
    id="outside"
    type="text"
  />
</div>
`;

exports[`ContextMenu tests > Position adjusted when too near right edge 1`] = `
<div
  class="outermost"
>
  <div>
    <div
      class="context-menu-area"
    >
      <p
        class="greeting"
        style="color: black; font: Arial;"
      >
         Happy Halloween 
      </p>
    </div>
     
    <div
      class="context-menu-mask"
      data-v-1f32e17a=""
      style=""
    >
      <menu
        active-descendent="context-menu-item-8"
        class="context-menu-container"
        data-v-1f32e17a=""
        style="left: 798px; top: 2px;"
        tabindex="0"
      >
        <button
          class="unstyled-button context-menu-option hoverable-item active-descendant"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      One
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option hoverable-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      Two
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option hoverable-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          type="button"
        >
          
                      Three
                    
        </button>
         
        <button
          class="unstyled-button context-menu-option disabled-item"
          data-v-1f32e17a=""
          data-v-4c617532=""
          disabled="disabled"
          type="button"
        >
          
                      Disabled
                    
        </button>
      </menu>
    </div>
  </div>
   
  <input
    id="outside"
    type="text"
  />
</div>
`;
